--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /*  your css code here. If applicable */
+    table {
+            border-collapse: separate;
+            border-spacing: 10px;
+        }
+        th, td {
+            padding: 10px;
+            border: 2px solid #ccc;
+            border-radius: 8px;
+            text-align: center;
+        }
+        th {
+            font-weight: bold;
+            background-color: white;
+        }
+        td:nth-child(odd) {
+            background-color: white;
+        }
+        td:nth-child(even) {
+            background-color: #eee;
+        }
